syntax = "proto3";
package anytype;
option go_package = "testchanges";

message TextContent {
  oneof value {
    TextAppend textAppend = 1;
  }
}

message TextAppend {
  string text = 1;
}

message TextSnapshot {
  string text = 1;
}

message TextData {
  repeated TextContent content = 1;
  TextSnapshot snapshot = 2;
}
